<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DebtListAndroid</string>

    <!-- LoginActivity -->
    <string name="edit_username">User name</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="button_register">Register</string>
    <string name="login_error_incorrect">Incorrect login info</string>
    <string name="login_error_connection">Could not connect to server!</string>
    
    <!-- Persistent identification keys -->
    <string name="persistent_identification_username_key">debtlist.USERNAME</string>
    <string name="persistent_identification_password_hash_key">debtlist.PASSWORD_HASH</string>

    <!-- DebtViewActivity -->
    <string name="button_complete">Complete</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="title_activity_debt_view">DebtList</string>
    <string name="debt_view_no_debts1">You currently have no debts!</string>
    <string name="debt_view_no_debts2">Click \"ADD DEBT\" to add one!</string>
    <string name="debt_view_incoming_requests_separator">Incoming debt requests</string>
    <string name="debt_view_confirmed_separator">Confirmed debts</string>
    <string name="debt_view_outgoing_requests_separator">Outgoing debt requests</string>
    <string name="debt_view_dialog_no_friends">You currently have no friends to associate debts with.\nPlease add a friend by clicking \"FRIENDS\" and then \"ADD FRIEND\".</string>

    <!-- Menu -->
    <string name="menu_create_debt">Add debt</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_settings">Settings</string>

    <!-- CreateDebtActivity -->
    <string name="title_activity_create_debt">Create debt</string>
    <string name="create_debt_button">Create debt</string>
    <string name="create_debt_spinner_prompt">Select user</string>
    <string name="create_debt_error_message_filled">Please fill all fields.</string>
    <string name="create_debt_error_message_invalid">Please avoid the following character \".</string>
    <string name="create_debt_amount">Amount</string>
    <string name="create_debt_what">What</string>
    <string name="create_debt_comment">Comment</string>
    <string name="create_debt_radio_to">To selected user</string>
    <string name="create_debt_radio_from">To me</string>

    <!-- FriendViewActivity -->
    <string name="title_activity_friend_view">Friends</string>
    <string name="friend_view_incoming_separator">Your friend requests</string>
    <string name="friend_view_confirmed_separator">Confirmed friends</string>
    <string name="friend_view_outgoing_separator">Your pending friend requests</string>
    <string name="friend_view_accept_incoming">Accept</string>
    <string name="friend_view_decline_incoming">Decline</string>
    <string name="friend_view_add_friend">Add friend</string>
    <string name="friend_view_debts">Debts</string>
    <string name="friend_view_no_friends">You currently have no friends!\nClick \"ADD FRIEND\" to add one!</string>

    <!-- AddFriendActivity -->
    <string name="title_activity_add_friend_view">Add friend</string>
    <string name="add_friend_username_email">Enter user name or e-mail</string>
    <string name="add_friend_error_message">User not found or already added!</string>
    <string name="add_friend_button">Add friend</string>

    <!-- CreateUserActivity -->
    <string name="title_activity_create_user">Create user</string>
    <string name="create_user_username">User name</string>
    <string name="create_user_email">Email</string>
    <string name="create_user_password1">Password</string>
    <string name="create_user_password2">Repeat password</string>
    <string name="create_user_button">Create user</string>
    <string name="create_user_error_fill">Please fill all fields</string>
    <string name="create_user_error_password_match">Your passwords does not match</string>
    <string name="create_user_error_invalid_email">Invalid email address</string>
    <string name="create_user_error_email_already_registered">Email already registered</string>
    <string name="create_user_error_invalid_username">Use a maximum of 30 characters for user name</string>
    <string name="create_user_error_username_taken">User name already taken</string>
    <string name="create_user_error_network">Could not establish connection to server</string>
    <string name="create_user_error_mail">Failed sending activation mail, please try again later!</string>

    <!-- ActivateUserActivity -->
    <string name="title_activity_activate_user">Activate user</string>
    <string name="activate_user_username">User name</string>
    <string name="activate_user_password">Password</string>
    <string name="activate_user_key">Activation key (received on mail)</string>
    <string name="activate_user_button">Activate</string>
    <string name="activate_user_error_filled">Please fill in the activation key received on mail</string>
    <string name="activate_user_error_key">Wrong activation key</string>
    <string name="activate_user_error_network">Could not establish connection to server</string>
    <string name="activate_user_error_login_info">SHOULD NOT HAPPEN: Wrong user name or password</string>
    
    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_time_between_updates_text_view">Time between updates (in milliseconds). Enter 0 to turn off automatic updates\:</string>
    <string name="settings_disable_when_not_on_wifi">Disable automatic updates when not connected by wifi?</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_time_between_updates_key">debtlist.TIME_BETWEEN_UPDATES</string>
    <string name="settings_disable_updates_when_not_on_wifi_key">debtlist.DISABLE_UPDATES_WHEN_NOT_ON_WIFI</string>
    <string name="settings_time_between_updates_error_message">Invalid time between updates! Must be greater than 1 minute (60 000 milliseconds) or 0 to disable.</string>
    
    <!-- Notifications NOT USED FOR NOW..-->
    <string name="notification_friend_request_pending_title">New friend request</string>
    <string name="notification_friend_request_pending_text"> has added you as</string>

</resources>