<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateUserActivity" >

    <EditText 
        android:id="@+id/create_user_username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/create_user_username"/>

    <EditText 
        android:id="@+id/create_user_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/create_user_email"/>

    <EditText 
        android:id="@+id/create_user_password1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/create_user_password1"/>

    <EditText 
        android:id="@+id/create_user_password2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/create_user_password2"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".CreateUserActivity" >
        
        <TextView
            android:id="@+id/create_user_error_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:visibility="invisible"
            android:textColor="#ff0000"
            android:textSize="18sp" >
        </TextView>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="create_user"
            android:text="@string/create_user_button" />
    </LinearLayout>
</LinearLayout>