<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DebtViewActivity" >

    <TextView
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:textSize="12sp" >
    </TextView>

    <TextView
        android:id="@+id/toptext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/bottomtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/commenttext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="18sp" >
    </TextView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".DebtViewActivity" >

        <Button
            android:id="@+id/button_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="complete_debt"
            android:text="@string/button_complete" />

        <Button
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="accept_debt"
            android:text="@string/button_accept" />

        <Button
            android:id="@+id/button_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="decline_debt"
            android:text="@string/button_decline" />
    </LinearLayout>

</LinearLayout>